Rename moah `uri`s to `url`s

--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -204,7 +204,7 @@ this.updateSelfProperties({
 });
 ```
 
-Because properties are identified by URIs, you may wish to alias them in your code if used in multiple places. For example:
+Because properties are identified by URLs, you may wish to alias them in your code if used in multiple places. For example:
 
 ```js
 const nameKey = "https://blockprotocol.org/types/property-type/name/";
@@ -226,7 +226,7 @@ You can read more about how types are described on the [working with types](/doc
 
 You can create new entities using the `createEntity` method.
 
-New entities should be assigned starting `properties` and an `entityTypeId` (a URI pointing to their entity type).
+New entities should be assigned starting `properties` and an `entityTypeId` (a URL pointing to their entity type).
 
 ### Linking entities together
 
